// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withCookiesPage browser should add cookie to page props 1`] = `
Object {
  "cookies": Cookies {
    "HAS_DOCUMENT_COOKIE": true,
    "cookies": Object {},
    "hooks": undefined,
  },
  "init": true,
}
`;

exports[`withCookiesPage server should add cookie to page props 1`] = `
Object {
  "cookies": Cookies {
    "HAS_DOCUMENT_COOKIE": true,
    "cookies": Object {
      "key": "value",
    },
    "hooks": undefined,
  },
  "init": true,
}
`;
